# autodev

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROGRESS.md
src/autodev/: __init__.py  cli.py  config.py
src/autodev/core/: __init__.py  analyzer.py  executor.py  git_manager.py  planner.py  scanner.py
src/autodev/db/: store.py
src/autodev/llm/: __init__.py  client.py  prompts.py
src/autodev/utils/: file_utils.py
src/autodev/web/: app.py
src/autodev/web/templates/: base.html  dashboard.html  job_detail.html
tests/: test_analyzer.py  test_cli.py  test_db.py  test_executor.py  test_file_utils.py  test_git_manager.py  test_llm_client.py  test_prompts.py  test_scanner.py  test_store.py  test_web.py
